--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -179,7 +179,7 @@ NodeJS.</p>
 <p>1 day ago ... Description. We are seeking for a Site Reliability Engineer who will be a part of a 
 team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/291a57aa-b179-4823-8218-be5280e54f68'>Quizlet - Site Reliability Engineer - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/291a57aa-b179-4823-8218-be5280e54f68'>Quizlet - Site Reliability Engineer - Remote</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -215,7 +215,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/socialpoint/jobs/1776352'>Job Application for Site Reliability Engineer at Social Point</a></h5> 
+<h5><a href='https://boards.greenhouse.io/socialpoint/jobs/1776352'>Job Application for Site Reliability Engineer at Social Point</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -231,7 +231,7 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/kf3qrzp541zaskucr3u3t4z7uo'>Site Reliability Engineer | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/kf3qrzp541zaskucr3u3t4z7uo'>Site Reliability Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -255,12 +255,12 @@ team to be responsible for supporting Harmonic VOS platform. VOS is?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/quizlet-2/ecc3ad55-5880-45ad-9de2-6b0001339dc0'>Quizlet - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Site Reliability Engineer. San Francisco, CA. Engineering ? SRE. Full-time. Apply 
 for this job. Quizlet's mission is to help students (and their teachers) practice?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691989279-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691989279-cloud-site-reliability-engineer-sre-'>4Catalyzer Cloud Site Reliability Engineer (SRE) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -317,7 +317,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/griddynamics/job/oyGX9fw4'>Grid Dynamics Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -367,7 +367,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1773848'>Job Application for Site Reliability Engineer, IAMS at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -375,7 +375,7 @@ durably while increasing product velocity, and further deliver on our mission to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/9718ae15-ddbe-45e3-a396-5b2e55f9d32f'>Carta - Senior+ Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/9718ae15-ddbe-45e3-a396-5b2e55f9d32f'>Carta - Senior+ Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">New York City, NY</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -422,7 +422,7 @@ Identity?...</p>
 <p>Jul 1, 2019 ... InComm is now hiring a Site Reliability Engineer - Japan in Tokyo, Tokyo. 
 Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/collagecom/jobs/4340505002'>Job Application for Senior Site Reliability Engineer (Remote) at Collage.com</a></h5> 
+<h5><a href='https://boards.greenhouse.io/collagecom/jobs/4340505002'>Job Application for Senior Site Reliability Engineer (Remote) at Collage.com</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
