Android Engineer at Wadhwani AI . Job Application for Sr. Android Software Engineer at Fitbit. Stepping Up Solutions  Senior Embedded Android Engineer | SmartRecruiters. 4Catalyzer Senior Android Engineer | SmartRecruiters. Rival - Android Engineer. AiCure - Jobs: Senior Android Engineer - Apply online. Senior Android Engineer | Averity. Orro - Android Applications Engineer - Senior. Tide Business Banking - Jobs: Senior Android Engineer - Apply online. Job Application for Senior Android Engineer - Content and Partners team at Glovo. Adevinta Android Software Engineer Coches&amp;Motos.net | SmartRecruiters. Job Application for Android Engineer at ACV Auctions. Job Application for Android Engineer at ACV Auctions. allego - Jobs: Senior Android Mobile Engineer - Apply online. Mojo Vision - Sr. Android Software Engineer.     Android Engineer  at Vokal . Quizlet - Android Software Engineer, Team Engagement. Quizlet - Android Software Engineer, Subscriptions. Job Application for Principal Android Engineer at MedMen.     Android Engineer  at Vokal . Joyn GmbH - Android Software Engineer (m/f/d). Job Application for Android Engineer (New Grad) at Robinhood. Job Application for Android Engineer (Intern/Co-op) at Robinhood. Trek Bicycle Karrieren–Android Mobile Software Engineer. Android SDK Engineer - ab180 Inc. - Career Page. Incode Technologies - Senior Android Engineer (Mexico City, Mexico). Tally - Senior Android Engineer. Job Application for Senior Android Engineer  at foodpanda Singapore. Trek Bicycle Careers - Android Mobile Software Engineer. Scribd - Android Engineer. Gloo - Senior Android Engineer. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Job Application for Lead Android Engineer (m/f/d) at FREE NOW. Front - Android Engineer. Klarna - Senior/Lead Android Engineer. Job Application for Android Engineer  at Envoy. Job Application for Android Engineer at JUUL Labs. Deezer Lead Android Engineer - Core Team | SmartRecruiters. Babylon Health - Senior

--- a/android-engineer.html
+++ b/android-engineer.html
@@ -227,7 +227,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/258d7b4c-9d59-4a6e-be7b-82bd10468bea'>Houzz - Junior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -253,7 +253,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tymit.workable.com/j/8F1F826C11'>Tymit - Jobs: Android Engineer - Apply online</a></h5> 
+<h5><a href='https://tymit.workable.com/j/8F1F826C11'>Tymit - Jobs: Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -265,7 +265,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hiring/28ce3410-4412-48dc-af85-6fadaf1d9e0a'>  - Senior Android QA Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hiring/28ce3410-4412-48dc-af85-6fadaf1d9e0a'>  - Senior Android QA Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -332,11 +332,11 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/jobs/971010'>Tide Business Banking - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/jobs/971010'>Tide Business Banking - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
+<h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
@@ -380,7 +380,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690421223-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999690421223-senior-android-sdk-engineer-m-f-d-'>Smaato Inc. Senior Android SDK Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
