Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer. Lime - Security Analyst. Softcat Careers - Security Engineer. GBM Cloud Security Engineer (AWS) | SmartRecruiters. Farfetch Careers - Junior Security Analyst - Plug-In Programme 2019. Workiva Inc. Careers - Security Operations Engineer. Forescout Technologies Inc. Careers - Security Research Engineer. Guidewire Software, Inc. Careers - Senior Product Security Engineer, Penetration Testing - San Mateo, CA. AmSty - Cyber Security Engineer. Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters. Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer. Wabash Valley Power Cyber Security Analyst | SmartRecruiters. Wabash Valley Power Senior Cyber Security Analyst | SmartRecruiters. Curriculum Associates Careers - Infrastructure Security Engineer.       Junior Security Analyst (Fixed Term – 6 months) - FlexTrade     . Viva Wallet - Jobs: Security Engineer - Apply online. Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. Hostway | HOSTING - Jobs: Security Operations Analyst - Apply online. Security Analyst PL (P366TS) - Apply ... - CINQ Technologies - Jobs. CrowdStrike Careers - Security Analyst. Kenna Security - Software Engineer. Job @ Sygnum (Zürich): Senior Security Engineer | JOIN. Logitech Careers - IT Security Operations Analyst. Security Analyst - SOC | Trustwave Careers. Application Security Engineer | Shulman Fleming &amp; Partners. Cyber Security Operations Center (CSOC) Engineer - MITRE Careers. Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN. Sr IT Security Architect - Florida Blue Careers. Anitian  Security Engineer | SmartRecruiters. Cyber Security Data Analytics Engineer - MITRE Careers. ServiceNow Careers - Senior Security Risk Engineer. Freelancer.com - Jobs: Security Engineer - Apply online. Zycus - Jobs: Application Security Architect (Java) - Apply online. Zycus - Jobs: Application Security Arch

--- a/security.html
+++ b/security.html
@@ -39,8 +39,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/limebike/a0a3ed49-2294-49d5-b9f7-0fa577025343'>Lime - Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/schneider-electric/job/oKfQ9fwI'>Schneider Electric NAM Careers - Senior Endpoint Security Support Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/limebike/a0a3ed49-2294-49d5-b9f7-0fa577025343'>Lime - Security Analyst</a></h5> 
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/softcat/job/oCPDafwY'>Softcat Careers - Security Engineer</a></h5> 
@@ -144,7 +148,7 @@
 MITRE, you can have both. That's because MITRE people are committed to 
 tackling?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://capmo.join.com/jobs/271728-qa-and-security-engineer-m-f-d'>Job @ Capmo (Munich): QA & Security Engineer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -161,7 +165,7 @@ tackling?...</p>
 <p>2 days ago ... Combine CyberSecurity domain expertise and contemporary data science skills 
 to enhance cyber adversary detection, network defense, and SOC process?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oJWx9fw5&__jvst=Employee+Referral&__jvsd=s3C3Jfwb&__jvsc=Twitter&bid=nH0QTKwF'>ServiceNow Careers - Senior Security Risk Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -215,7 +219,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
+<h5><a href='http://macstadiuma1.applytojob.com/apply/9iywoLY8fN/Associate-Network-Security-Engineer'>Associate Network Security Engineer - MacStadium - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -327,7 +331,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999692169917-senior-security-analyst-managed-hosting'>Merkle Inc. Senior Security Analyst, Managed Hosting | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -362,7 +366,7 @@ new?...</p>
 <p>Jul 9, 2019 ... Raleigh, NC is now hiring a Expert Security Engineer in Raleigh, North Carolina. 
 Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
+<h5><a href='https://careers-berkley.icims.com/jobs/2109/splunk-security-automation-metrics-engineer/job'>Splunk Security Automation Metrics Engineer in Wilmington ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... DE, Wilmington is now hiring a Splunk Security Automation Metrics Engineer in 
 Wilmington, Delaware. Review all of the job details and apply today!</p>
@@ -371,7 +375,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/arcticwolfnetworks/jobs/4347519002'>Job Application for Concierge Security Analyst - 1 at Arctic Wolf Networks</a></h5> 
 <p><span class="badge badge-light">Kitchener-Waterloo Canada Kitchener-Waterloo Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -421,7 +425,7 @@ today!</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
+<h5><a href='https://boards.greenhouse.io/blockfi/jobs/4333695002'>Job Application for Security Engineer at BlockFi</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -442,7 +446,7 @@ today!</p>
 <p>4 days ago ... Cybersecurity Analyst. Key Role: Provide detection, identification, and reporting 
 of possible Cyber-attacks and intrusions, anomalous activities, and misuse?...</p>
 <hr/>
-<h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oath.wd5.myworkdayjobs.com/careers/job/US---Sunnyvale/Paranoids-Senior-Enterprise-Security-Engineer_JR0010822'>Paranoids Senior Enterprise Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Paranoids Senior Insider Threat Analyst | US - Sunnyvale, More... Paranoids 
 Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...</p>
@@ -451,12 +455,8 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999692047692-it-security-analyst-firewalls-vulnerability-management'>Technology Navigators IT Security Analyst - Firewalls, Vulnerability Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999692047692-it-security-analyst-firewalls-vulnerability-management'>Technology Navigators IT Security Analyst - Firewalls, Vulnerability Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, Texas Texas, United States</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/weworkglobalit/jobs/4330893002'>Job Application for Software Security Architect at WeWork Global Technology</a></h5> 
-<p><span class="badge badge-light">New York San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
 
